[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resources/Sprites/interactables/respawn.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Interactables/respawn.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UI/usePrompt.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.0053, 7.99346 )

[node name="respawn" type="Area2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
z_index = -10
texture = ExtResource( 1 )
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="usePrompt" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -11.323 )
[connection signal="body_entered" from="." to="." method="_on_respawn_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_respawn_body_exited"]
